tests/NormalTests/paczka2/big_fuzzy/93824296.err
Error in line 7: A676 A935 66,3
Error in line 9: 51Mc A676 75,5
Error in line 24: cNZlrNuTh A676 78,51
Error in line 26: me6HYdeI4 A150 10,17
Error in line 43: 51Mc A935 48,4
Error in line 49: 4ogdILcci S454 6,8
Error in line 40: me6HYdeI4 A676 61,0
Error in line 56: 51Mc S454 23,9
Error in line 51: gaZuo8TxyLh S454 78,0
Error in line 61: A676 A676 302,1
Error in line 54: me6HYdeI4 A150 30,0
Error in line 71: 8AXKp6pqCP A935 90,09
Error in line 48: cNZlrNuTh A150 2,0
Error in line 76: cNZlrNuTh S454 28,4
Error in line 83: me6HYdeI4 A676 -2,4
Error in line 84: 8AXKp6pqCP A935 -4,4
Error in line 38: 8AXKp6pqCP A676 58,4
Error in line 86: 8AXKp6pqCP A935 55,9
Error in line 73: 4ogdILcci S454 26,0
Error in line 103: AW7W AW7W 98,3
Error in line 105: 8AXKp6pqCP S454 90,4
Error in line 106: A676 A676 66,6
Error in line 98: 51Mc A935 57,9
Error in line 101: 4ogdILcci A150 45,4
Error in line 113: A676 A935 58,1
Error in line 115: 51Mc A150 60,1
Error in line 77: me6HYdeI4 A676 39,3
Error in line 120: A676 S454 79,8
Error in line 126: me6HYdeI4 A935 19,5
Error in line 125: gaZuo8TxyLh A150 344,0
Error in line 143: 4ogdILcci A150 99,0
Error in line 153: A676 S454 30,1
Error in line 149: cNZlrNuTh A935 75,7
Error in line 163: me6HYdeI4 A150 59,9
Error in line 165: me6HYdeI4 A676 31,3
Error in line 161: 51Mc A150 8,2
Error in line 168: 51Mc S454 9,72
Error in line 171: gaZuo8TxyLh A150 2,4
Error in line 176: gaZuo8TxyLh S454 91,3
Error in line 177: gaZuo8TxyLh A150 90,6
Error in line 180: 4ogdILcci A935 87,8
Error in line 179: A676 A935 99,6
Error in line 167: 51Mc A676 24,1
Error in line 197: me6HYdeI4 S454 150,39
Error in line 194: 8AXKp6pqCP A935 72,5
Error in line 193: me6HYdeI4 S454 53,5
Error in line 202: me6HYdeId A935 d6,8
Error in line 201: me6HYdeI4 A676 24,2
Error in line 200: A676 A150 14,6
Error in line 215: 8AXKp6pqCP A935 49,15
Error in line 214: A676 A676 35,8
Error in line 207: 51Mc S454 318,3
Error in line 224: 8AXKp6pqCP A935 43,6
Error in line 222: cNZlrNuTh S454 2,2
Error in line 238: A676 A676 42,8
Error in line 245: 8AXKp6pqCP S454 .1,8
Error in line 236: gaZuo8TxyLh A935 79,8
Error in line 246: gaZuo8TxyLh A676 98,2
